--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,4 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&display=swap');
