--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,34 @@
     animation: pulse 0.5s ease-in-out infinite;
 }
 
+
+/* animation for the carousel in my popular recipes */
+
+.carousel-container {
+    /* Adjust these styles as necessary */
+    width: 1030px;  /* width of 4 recipe cards */
+    overflow: hidden;
+    height: 300px;
+   
+
+  }
+  
+  .carousel-content {
+    position:relative;
+    display: flex;
+    transition: transform 0.6s ease-in-out;
+    
+    
+
+}
+  
+  .recipe-card-container {
+    width: calc(25% - 12px);  
+    height: auto;
+    padding: 0 ;
+    margin:0 5px;
+    /* margin-right:12px; */
+    flex:none;
+  }
+
 @tailwind utilities;
