added x button in the error message

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&display=swap');
 
 
-/* search button hover animation  */
 
 @keyframes pulse {
     0% {
@@ -24,11 +23,10 @@
 }
 
 
-/* animation for the carousel in my popular recipes */
 
 .carousel-container {
-    /* Adjust these styles as necessary */
-    width: 1024px;  /* width of 4 recipe cards */
+   
+    width: 1024px;
     overflow: hidden;
     height: 300px;
    
@@ -50,7 +48,6 @@
     height: auto;
     padding: 0 ;
     margin:0 5px;
-    /* margin-right:12px; */
     flex:none;
   }
 
